# mint-fi-tracker

./: .gitignore  README.md  pyproject.toml
data-old/: mint_accounts.csv  mint_accounts.json  mint_budget.csv  mint_budget.json  mint_credit_score.json  mint_net_worth.csv  mint_transactions.csv  mint_transactions.json
src/: __main__.py  cashflow.py  config.ini  credentials_mint.json  expense_categories.py  fi.py  forecast copy.py  forecast.py  housing.py  income.py  life.py  mint_api.py  retirement.py  taxes.py
