[tool.poetry]
name = "mint-fi-tracker"
version = "0.1.0"
description = "Financial independence tracker/forecaster using Mint API"
authors = ["Quinn McHugh <qpmchugh@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "mint_fi_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
plotly = "^5.13.1"
mintapi = "^2.13"
pathlib = "^1.0.1"
configparser = "^5.3.0"
numpy = "^1.24.2"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
